Projects: fix hexes cut off on mobile

--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -53,6 +53,7 @@
 		.hexGrid {
 			width: 280vw;
 			margin-left: calc(-50% - 52vw);
+			padding-bottom: 5.5vw;
 		}
 
 		.hex {
